# netsphere-bridge-app

./: .editorconfig  .gitignore  ARCHITECTURE.md  AUTH_APPS_SCRIPT.md  BUILD_EXE.md  CHANGELOG.md  CODEMAP.md  COMPATIBILITY_MULTIPLATFORM.md  CONTRIBUTING.md  Código.gs  DEVELOPMENT_GUIDE.md  KNOWN_ISSUES.md  QUALITY_GATES.md  README.md  REFACTOR_PLAN.md  RELAY_PROXY_LAN_BENCHMARK.md  SECURITY.md  TOOLS_BENCHMARK.md  build_windows_exe.ps1  netsphere.icns  netsphere_bridge.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: build.yml
platform_adapter/: __init__.py  base.py  unix.py  windows.py
tools/: ensure_app_icon.py  generate_runtime_constants.py
