[project]
name = "netsphere-bridge"
version = "0.14.2"
description = "SSH bridge/proxy desktop app for remote LAN access"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "NetSphere Team" }
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["DIST"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
